Bug 25446 - -fpic/-fPIC failure in gcc.dg/vect/vect-ifcvt-9.c
Summary: -fpic/-fPIC failure in gcc.dg/vect/vect-ifcvt-9.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.1.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: 23224
  Show dependency treegraph
 
Reported: 2005-12-16 15:16 UTC by Kaveh Ghazi
Modified: 2007-10-15 17:31 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail: 4.1.0 4.2.0
Last reconfirmed: 2006-01-29 20:59:04


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kaveh Ghazi 2005-12-16 15:16:29 UTC
I'm getting a -fpic/-fPIC 4.1/mainline failure in gcc.dg/vect/vect-ifcvt-9.c on x86_64 and i686:

http://gcc.gnu.org/ml/gcc-testresults/2005-12/msg00892.html
http://gcc.gnu.org/ml/gcc-testresults/2005-12/msg00889.html
http://gcc.gnu.org/ml/gcc-testresults/2005-12/msg00891.html
http://gcc.gnu.org/ml/gcc-testresults/2005-12/msg00888.html

The failures look like this:
FAIL: gcc.dg/vect/vect-ifcvt-9.c scan-tree-dump-times vectorized 1 loops 2
Comment 1 Andrew Pinski 2006-01-29 20:59:04 UTC
Confirmed.  I don't know what is the correct thing here to do.
Comment 2 Nathan Froyd 2007-08-02 14:43:03 UTC
Subject: Bug 25446

Author: froydnj
Date: Thu Aug  2 14:42:53 2007
New Revision: 127163

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=127163
Log:
	PR middle-end/25446
	* c-objc-common.c (c_cannot_inline_tree_fn): Check for an
	always_inline attribute on the function decl.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/c-objc-common.c

Comment 3 Nathan Froyd 2007-10-15 17:31:00 UTC
Marking as fixed.